--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let's be creative !</title>
-    <link rel="stylesheet" href="non.css">
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 
@@ -360,7 +360,7 @@
                     <div id="complexe4">SATISTIED CLIENT </div>
 
              </div>
-</section>>
+</section>
 
 
 
@@ -374,13 +374,71 @@
     </div>
 </section>
 
-<p>SUITE</p>
 
 
 
 
 
+<!-- LES 4 BLOCS -->
 
+
+    <header>
+        <div class='pop'>
+        <h4> REAL CHEAP <span class="wsh">PRICES</span></h4>
+        <h5>We offer all our services in real low prices in comparison with similar companies</h5>
+    </header></div>
+    <section id="soleil">
+    <div>
+        <article>
+            <button id="cheval" type="button">STANDARD PLAN</button>
+            <p id="argent">$ 19,99</p>
+            <div id="vacances">
+                <p>5 projects</p>
+                <p>5 GB Storage</p>
+                <p>Unlimited Users</p>
+                <p>10 GB Bandwith</p>
+                <p>Enhanced Security</p>
+            </div>
+            <button id="end" type="button">SIGN UP NOW</button>
+        </article>
+        <article>
+            <button id="cheval" type="button">PREMIUM PLAN</button>
+            <p id="argent">$ 29,99</p>
+            <div id="vacances">
+                <p>10 projects</p>
+                <p>15 GB Storage</p>
+                <p>Unlimited Users</p>
+             <p>20 GB Bandwith</p>
+             <p>Enhanced Security</p>
+            </div>
+            <button id="end" type="button">SIGN UP NOW</button>
+        </article>
+        <article>
+            <button id="cheval" type="button">ADVANCED PLAN</button>
+            <p id="argent">$ 49,99</p>
+            <div id="vacances">
+                <p>15 projects</p>
+                <p>30 GB Storage</p>
+                <p>Unlimited Users</p>
+                <p>50 GB Bandwith</p>
+                <p>Enhanced Security</p>
+            </div>
+            <button id="end" type="button">SIGN UP NOW</button>
+        </article>
+        <article>
+            <button id="cheval" type="button">ULTIMATE PLAN</button>
+            <p id="argent">$ 99,99</p>
+            <div id="vacances">
+                <p>Unlimited projects</p>
+                <p>Unlimited Storage</p>
+                <p>Unlimited Users</p>
+                <p>Unlimite Bandwith</p>
+                <p>Enhanced Security</p>
+            </div>
+            <button id="end" type="button">SIGN UP NOW</button>
+        </article>
+    </div>
+</section>
 
 
 
